extract github config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+server.port= 8044
+github.client.id=35799
+github.client.secret=4da52256173f67a67b5fd2edcb8d08fe301795be
+github.redirect.uri=http://localhost:8044/callback
