config from code to properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-server.port= 8044
-github.client.id=35799
-github.client.secret=4da52256173f67a67b5fd2edcb8d08fe301795be
+server.port=8044
+github.client.id=Iv1.337c4b8d02421b65
+github.client.secret=501c9335fe83d9d011c6d1d5209b62739eef2b9d
 github.redirect.uri=http://localhost:8044/callback
+spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=222333
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
