--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8044
-github.client.id=Iv1.337c4b8d02421b65
-github.client.secret=501c9335fe83d9d011c6d1d5209b62739eef2b9d
+github.client.id=ddb68e78477cb86a46d1
+github.client.secret=b04e8e46f7ded07ab589aa4015f0e52a13787bc3
 github.redirect.uri=http://localhost:8044/callback
-spring.datasource.url=jdbc:mysql://localhost:3306/community?useUnicode=true&characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/community
 spring.datasource.username=root
 spring.datasource.password=222333
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
