--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ github.redirect.uri=http://localhost:8044/callback
 spring.datasource.url=jdbc:mysql://localhost:3306/community
 spring.datasource.username=root
 spring.datasource.password=222333
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+mybatis.configuration.map-underscore-to-camel-case=true
