--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.username=root
 spring.datasource.password=222333
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.demo1.mapper
+mybatis.mapper-locations=classpath:mapper/*.xml
+
